# siaplotlib

./: .gitignore  LICENCE  README.md  pyproject.toml  tests.py
dev_tools/: README.md  test_chart_builders.py  test_processing_pkg.py
docs/: README.md
omdepplotlib/: raw_image.py
omdepplotlib/chart_building/: base_builder.py  cartographic_map.py  general.py  heatmap.py  level_chart.py  line_chart.py  time_series.py
omdepplotlib/charts/: base_chart.py  cartographic_map.py  general.py  heatmap.py  interfaces.py  level_chart.py  line_chart.py  raw_image.py  time_series.py
omdepplotlib/preprocessing/: dataframe.py  munging.py  subsetting.py
src/omdepplotlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/omdepplotlib/chart_building/: level_chart.py  line_chart.py
src/omdepplotlib/charts/: base_chart.py  level_chart.py  line_chart.py
src/omdepplotlib/preprocessing/: aggregation.py  computations.py
src/siaplotlib/chart_building/: base_builder.py  interfaces.py  level_chart.py  line_chart.py
src/siaplotlib/charts/: base_chart.py  level_chart.py  line_chart.py  raw_image.py
src/siaplotlib/processing/: computations.py  parallelism.py  wrangling.py
src/siaplotlib/utils/: exceptions.py  log.py
tests/: test_chart_builders.py
tests/lib_utils/: general_utils.py
tools/: general_utils.py
