# pyproject.toml

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siaplotlib"
version = "0.1.0"
description = "Provide an easy to use interface for plotting oceanic data."
readme = "README.md"
authors = [{ name = "SIA", email = "180300337@ucaribe.edu.mx" }]
keywords = ["cartopy", "gis", "cartography", "oceanographic", "oceanic", "visualization"]
dependencies = [
  "numpy >= 1.23.4",
  "pandas >= 1.5.1",
  "xarray >= 2022.11.0",
  "netcdf4 >= 1.6.1",
  "matplotlib >= 3.6.2",
  "pillow >= 9.3.0",
  "cartopy >= 0.21.1"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/OMDEP/omdepplotlib"
