# pyproject.toml

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siaplotlib"
version = "0.2.0"
description = "Provide an easy to use interface for plotting oceanographic data."
readme = "README.md"
authors = [{ name = "SIA", email = "180300337@ucaribe.edu.mx" }]
keywords = ["cartopy", "gis", "cartography", "oceanographic", "oceanic", "visualization"]
dependencies = [
  "numpy >= 1.23.4",
  "pandas >= 1.5.1",
  "xarray >= 2022.11.0",
  "matplotlib >= 3.6.2",
  "pillow >= 9.3.0",
  "cartopy == 0.21.1",
  "windrose >= 1.8.1"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["bumpver", "netcdf4 == 1.6.2"]

[project.urls]
Homepage = "https://github.com/sia-information-system/siaplotlib"

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'current_version = "{version}"',
  'version = "{version}"'
]
"README.md" = [
  "**Version: {version}**"
]
"src/siaplotlib/__init__.py" = [
  "__version__ = '{version}'"
]
